; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_attach.c_sqlite3FixExprList.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_attach.c_sqlite3FixExprList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.ExprList_item* }
%struct.ExprList_item = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3FixExprList(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.ExprList_item*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %9 = icmp eq %struct.TYPE_3__* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %36

11:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  %14 = load %struct.ExprList_item*, %struct.ExprList_item** %13, align 8
  store %struct.ExprList_item* %14, %struct.ExprList_item** %7, align 8
  br label %15

15:                                               ; preds = %30, %11
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp slt i32 %16, %19
  br i1 %20, label %21, label %35

21:                                               ; preds = %15
  %22 = load i32*, i32** %4, align 8
  %23 = load %struct.ExprList_item*, %struct.ExprList_item** %7, align 8
  %24 = getelementptr inbounds %struct.ExprList_item, %struct.ExprList_item* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i64 @sqlite3FixExpr(i32* %22, i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %21
  store i32 1, i32* %3, align 4
  br label %36

29:                                               ; preds = %21
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %6, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %6, align 4
  %33 = load %struct.ExprList_item*, %struct.ExprList_item** %7, align 8
  %34 = getelementptr inbounds %struct.ExprList_item, %struct.ExprList_item* %33, i32 1
  store %struct.ExprList_item* %34, %struct.ExprList_item** %7, align 8
  br label %15

35:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %35, %28, %10
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i64 @sqlite3FixExpr(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
